Iteration 2 changes - segregated modals for header, footer ,programs, login, download_brochure and Apply Now.

--- a/components/loginModal.html
+++ b/components/loginModal.html
@@ -165,7 +165,7 @@
               </div>
             </div>
             <button type="submit" disabled="" class="button_root__RRK9v mt-auto button_b__2Obj5 "
-              style="width: 100%; "><span class="uppercase font-raleway">RESET</span>
+              style="width: 100%; display: none; "><span class="uppercase font-raleway">RESET</span>
             </button>
           </form>
           
