--- a/components/applyModal.html
+++ b/components/applyModal.html
@@ -57,21 +57,18 @@
                   <div class="basis-1/2"></div>
                 </div>
                 
-                <div class="ConnectModalForm_commonMargins__efaYq flex items-start gap-[17px]">
+                <div class="ConnectModalForm_commonMargins__efaYq flex items-start ">
                   <div class="shrink-0">
-                    <!-- <input id="consent_checkbox" aria-label="checkbox" class="outline-none rounded-[50%] align-middle border-[1px] border-stone-500 appearance-none cursor-pointer checked:bg-primary-blue checked:border-transparent checked:ring-2 checked:ring-primary-blue checked:ring-offset-2 checked:ring-offset-white" type="checkbox" name="consent"> -->
-                    <div class="banner-check">
-                      <div class="banner-check-icon">
-                        <input type="checkbox" name="consent" checked="">
+                      <div class="banner-check">
+                          <div class="banner-check-icon">
+                              <input type="checkbox" name="consent" checked="">
+                          </div>
                       </div>
-                      <p class="ConnectModalForm_authorization__FbK_y flex">I authorise Amity University
-                        Online and its associates to contact me with updates </br> & notifications via
-                        Email, SMS, WhatsApp, and Voice call as per the Privacy Policy.</br> This consent
-                        will override any registration for DNC / NDNC.</p>
-                    </div>
                   </div>
-                 
-                </div>
+                  <p class="ConnectModalForm_authorization__FbK_y">
+                      I authorise Amity University Online and its associates to contact me with updates & notifications via Email, SMS, WhatsApp, and Voice call as per the Privacy Policy. This consent will override any registration for DNC / NDNC.
+                  </p>
+              </div>
                 <button type="submit" id="submit_button" class="font-semibold font-raleway uppercase w-full border Input_btn___g__n bg-[#E7E7E7] border-stone-500 text-stone-500" disabled>Submit</button>
               </form>
             </div>
