--- a/components/programsModal.html
+++ b/components/programsModal.html
@@ -431,7 +431,7 @@
                     class="flex justify-center items-center"><span class="uppercase mr-3">ADVANTAGES</span></a></div>
         </div>
         
-        <div class="mt-auto flex flex-col items-start">
+        <div class="mt-auto flex flex-col items-start header_menuItem__2qruK">
             <button id="login-button-mobile" class="header_login__wzVUA"><svg fill="#fff" height="1rem" width="1em"
                     version="1.1" viewBox="0 0 512.001 512.001" xml:space="preserve" class="header_svgStudent__y2yK_" onclick="loginPopupMobileView()">
                     <g>
