--- a/components/programsModal.html
+++ b/components/programsModal.html
@@ -118,7 +118,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flex"><div class="header_linkBtn__tEslW w-full"><a href="../Program/index.html" target="_self" class="flex items-center justify-center"><span class="uppercase font-raleway mr-3">Explore All Programs</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
+            <div class="flex"><div class="header_linkBtn__tEslW w-full"><a href="../Program/"_self" class="flex items-center justify-center"><span class="uppercase font-raleway mr-3">Explore All Programs</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
         </div>
         <!-- Side Menu END -->
 
@@ -274,11 +274,7 @@
                                 </div>
                             </a><span class="ProgramsMenu_year__nCObZ">2 years</span></div>
                 </div>
-                <div class="flex justify-center mt-4"><button
-                            class="flex items-center px-4 py-2 border-2 border-gray-500 rounded-full">View All<span
-                                class="ml-2 flex items-center"><img alt="Left" loading="lazy" width="19" height="16"
-                                    decoding="async" data-nimg="1" style="color:transparent"
-                                    src="../_next/static/media/left-arrow.fd4bb094.svg"></span></button></div>
+                <div class="flex"><div class=" w-full"><a href="../Program/"_self" class="flex items-center justify-center"><span class="uppercase font-raleway mr-3">View All</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
             </div>
             <!-- Content Box end -->
         </div>
@@ -385,11 +381,7 @@
                             class="ProgramsMenu_tagSignifier__6eN9G">New</span>
                     </div>
                 </div>
-                <div class="flex justify-center mt-4"><a href="../Program/index.html" target="_self"><button
-                            class="flex items-center px-4 py-2 border-2 border-gray-500 rounded-full">View All<span
-                                class="ml-2 flex items-center"><img alt="Left" loading="lazy" width="19" height="16"
-                                    decoding="async" data-nimg="1" style="color:transparent"
-                                    src="../_next/static/media/left-arrow.fd4bb094.svg"></span></button></div>
+                <div class="flex"><div class=" w-full"><a href="../Program/"_self" class="flex items-center justify-center"><span class="uppercase font-raleway mr-3">View All</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
             </div>
         </div>
         <!-- END: Programs Menu Container -->
@@ -604,9 +596,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="conatiner flex">
-                                <div class="flex"><div class="header_linkBtn__tEslW w-full"><a href="../Program/index.html"></a><span class="uppercase font-raleway mr-3">Explore All Programs</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
-                        </div>
+                        <div class="flex"><div class="header_linkBtn__tEslW w-full"><a href="/programs" target="_self" class="flex items-center justify-center"><span class="uppercase font-raleway mr-3">Explore All Programs</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
                     </div>
                     <div class="w-full ProgramsMenu_contentBox__UHi_e" data-category="all" style="display:none" >
                             <div class="py-2 flex items-center ameya_backbtn_programmelist"><img alt="Go Back" loading="lazy" width="13" height="9" decoding="async" data-nimg="1" class="ProgramsMenu_submenuArrow__gnbLw" src="/_next/static/media/down-lt.bac39a25.svg" style="color: transparent;"><span class="ProgramsMenu_mobileSelectedProgram__yuSVm">All Programs</span></div>
@@ -660,11 +650,7 @@
                                             of Arts (BA)</span></div>
                                 </a><span class="ProgramsMenu_year__nCObZ">3 years</span></div>
                         </div>
-                        <div class="flex justify-center mt-4"><a href="../Program/index.html" target="_self"><button
-                                    class="flex items-center px-4 py-2 border-2 border-gray-500 rounded-full">View All<span
-                                        class="ml-2 flex items-center"><img alt="Left" loading="lazy" width="19" height="16"
-                                            decoding="async" data-nimg="1" style="color:transparent"
-                                            src="/_next/static/media/left-arrow.fd4bb094.svg"></span></button></div>
+                        <div class="flex"><div class=" w-full"><a href="../Program/"_self" class="flex items-center justify-center"><span class="uppercase font-raleway mr-3">View All</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
                     </div>
                     <div class="w-full ProgramsMenu_contentBox__UHi_e" data-category="UG" style="display:none">
                             <div class="flex items-center ameya_backbtn_programmelist py-2 "><img alt="Go Back" loading="lazy" width="13" height="9" decoding="async" data-nimg="1" class="ProgramsMenu_submenuArrow__gnbLw" src="/_next/static/media/down-lt.bac39a25.svg" style="color: transparent;"><span class="ProgramsMenu_mobileSelectedProgram__yuSVm">UG Programs</span></div>
@@ -715,12 +701,7 @@
                                             of Arts (Malayalam Medium ( BA)</span></div>
                                 </a><span class="ProgramsMenu_year__nCObZ">3 Years</span></div>
                                 </div>
-                                <div class="flex justify-center mt-4"><a href="../Program/index.html" target="_self"><button
-                                        class="flex items-center px-4 py-2 border-2 border-gray-500 rounded-full">View All<span
-                                                class="ml-2 flex items-center"><img alt="Left" loading="lazy" width="19" height="16"
-                                                decoding="async" data-nimg="1" style="color:transparent"
-                                                src="/_next/static/media/left-arrow.fd4bb094.svg"></span></button>
-                                </div>
+                                <div class="flex"><div class=" w-full"><a href="../Program/"_self" class="flex items-center justify-center"><span class="uppercase font-raleway mr-3">View All</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
                     </div>
                     <div class="w-full ProgramsMenu_contentBox__UHi_e" data-category="PG" style="display:none">
                         <div class="ameya_backbtn_programmelist py-2 flex items-center"><img alt="Go Back" loading="lazy" width="13" height="9" decoding="async" data-nimg="1" class="ProgramsMenu_submenuArrow__gnbLw" src="/_next/static/media/down-lt.bac39a25.svg" style="color: transparent;"><span class="ProgramsMenu_mobileSelectedProgram__yuSVm">PG Programs</span></div>
@@ -780,11 +761,7 @@
                                     style="background-color:#800080"
                                     class="ProgramsMenu_tagSignifier__6eN9G">Specialization</span></div>
                         </div>
-                        <div class="flex justify-center mt-4"><a href="../Program/index.html" target="_self"><button
-                                    class="flex items-center px-4 py-2 border-2 border-gray-500 rounded-full">View All<span
-                                        class="ml-2 flex items-center"><img alt="Left" loading="lazy" width="19" height="16"
-                                            decoding="async" data-nimg="1" style="color:transparent"
-                                            src="/_next/static/media/left-arrow.fd4bb094.svg"></span></button></div>
+                        <div class="flex"><div class=" w-full"><a href="../Program/"_self" class="flex items-center justify-center"><span class="uppercase font-raleway mr-3">View All</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
                     </div>
                     <div class="w-full ProgramsMenu_contentBox__UHi_e" data-category="specialization" style="display:none">
                         <div class="ameya_backbtn_programmelist py-2 flex items-center"><img alt="Go Back" loading="lazy" width="13" height="9" decoding="async" data-nimg="1" class="ProgramsMenu_submenuArrow__gnbLw" src="/_next/static/media/down-lt.bac39a25.svg" style="color: transparent;"><span class="ProgramsMenu_mobileSelectedProgram__yuSVm">Specialization</span></div>
@@ -1070,11 +1047,7 @@
                                     style="background-color:#800080"
                                     class="ProgramsMenu_tagSignifier__6eN9G">Specialization</span></div>
                         </div>
-                        <div class="flex justify-center mt-4"><a href="../Program/index.html" target="_self"><button
-                                    class="flex items-center px-4 py-2 border-2 border-gray-500 rounded-full">View All<span
-                                        class="ml-2 flex items-center"><img alt="Left" loading="lazy" width="19" height="16"
-                                            decoding="async" data-nimg="1" style="color:transparent"
-                                            src="/_next/static/media/left-arrow.fd4bb094.svg"></span></button></div>
+                        <div class="flex"><div class=" w-full"><a href="../Program/"_self" class="flex items-center justify-center"><span class="uppercase font-raleway mr-3">View All</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
                     </div>
                     <div class="w-full ProgramsMenu_contentBox__UHi_e" style="display:none">
                         <div class="flex ProgramsMenu_tabContainer__DpfaV">
@@ -1136,11 +1109,7 @@
                                     style="background-color:#1a325d" class="ProgramsMenu_tagSignifier__6eN9G">Popular</span>
                             </div>
                         </div>
-                        <div class="flex justify-center mt-4"><a href="../Program/index.html" target="_self"><button
-                                    class="flex items-center px-4 py-2 border-2 border-gray-500 rounded-full">View All<span
-                                        class="ml-2 flex items-center"><img alt="Left" loading="lazy" width="19" height="16"
-                                            decoding="async" data-nimg="1" style="color:transparent"
-                                            src="/_next/static/media/left-arrow.fd4bb094.svg"></span></button></div>
+                        <div class="flex"><div class=" w-full"><a href="../Program/"_self" class="flex items-center justify-center"><span class="uppercase font-raleway mr-3">View All</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
                     </div>
                     <div class="w-full ProgramsMenu_contentBox__UHi_e" style="display:none">
                         <div class="flex ProgramsMenu_tabContainer__DpfaV">
@@ -1238,7 +1207,7 @@
                                     href="/bachelor-of-arts-malayalam-online">
                                     <div class="flex items-center gap-3 font-bold ProgramsMenu_cardTitle__vbXJp"><span
                                             class="ml-3">Bachelor
-                                            of Arts (Malayalam Medium ( BA)</span></div>
+                                            of Arts Malayalam Medium ( BA)</span></div>
                                 </a><span class="ProgramsMenu_year__nCObZ">3 Years</span></div>
                             <div class="ProgramsMenu_tab__0j8Nn"><a title="Bachelor of  Arts (Tamil Medium) (BA)"
                                     href="/bachelor-of-arts-tamil-online">
@@ -1247,11 +1216,7 @@
                                             of Arts (Tamil Medium) (BA)</span></div>
                                 </a><span class="ProgramsMenu_year__nCObZ">3 Years</span></div>
                         </div>
-                        <div class="flex justify-center mt-4"><a href="../Program/index.html" target="_self"><button
-                                    class="flex items-center px-4 py-2 border-2 border-gray-500 rounded-full">View All<span
-                                        class="ml-2 flex items-center"><img alt="Left" loading="lazy" width="19" height="16"
-                                            decoding="async" data-nimg="1" style="color:transparent"
-                                            src="/_next/static/media/left-arrow.fd4bb094.svg"></span></button></div>
+                        <div class="flex"><div class=" w-full"><a href="../Program/"_self" class="flex items-center justify-center"><span class="uppercase font-raleway mr-3">View All</span><svg width="19" height="16" viewBox="0 0 19 16" stroke="#1A325D" xmlns="http://www.w3.org/2000/svg"><path id="Line_316" d="M1 7.91907L18 7.91907" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_317" d="M11.271 1.27179L17.8596 7.86042" stroke-width="1.5" stroke-linecap="round"></path><path id="Line_318" d="M11.271 14.4493L17.8596 7.86065" stroke-width="1.5" stroke-linecap="round"></path></svg></a></div></div>
                     </div>
                 </div><!--/$--><!--/$-->
             </div>
