Completed rest of the pages ( 4 pages ): About us Contact US UGC Regulations Privacy policy

--- a/components/loginModal.html
+++ b/components/loginModal.html
@@ -92,19 +92,19 @@
                     class="TextInput_root__De36R undefined" value="" name="phone">
                 </div>
               </div>
-              <div>
+              <div class="opacity-0">
                 <label for="b"></label>
                 <input type="text" id="b" disabled>
               </div>
-              <div>
+              <div class="opacity-0">
                 <label for="c"></label>
                 <input type="text" id="c" disabled>
               </div>
-              <div>
+              <div class="opacity-0">
                 <label for="d"></label>
                 <input type="text" id="d" disabled>
               </div>
-              <div>
+              <div class="opacity-0">
                 <label for="e"></label>
                 <input type="text" id="e" disabled>
               </div>
@@ -120,19 +120,19 @@
                 </div>
               </div>
 
-              <div>
+              <div class="opacity-0">
                 <label for="f"></label>
                 <input type="text" id="f" disabled>
               </div>
-              <div>
+              <div class="opacity-0">
                 <label for="g"></label>
                 <input type="text" id="g" disabled>
               </div>
-              <div>
+              <div class="opacity-0">
                 <label for="h"></label>
                 <input type="text" id="h" disabled>
               </div>
-              <div>
+              <div class="opacity-0">
                 <label for="i"></label>
                 <input type="text" id="i" disabled>
               </div>
